# patentorney-mcp

./: .gitignore  README.md  SECURITY.md  example_patent.yaml  pyproject.toml
.github/workflows/: check.yml  publish.yml
src/patentorney_mcp/: __init__.py  __main__.py  models.py  server.py  utils.py  validators.py
src/patentorney_mcp/docs/: checks.md  claims.md  data-model.md  export.md  figures.md  getting-started.md  glossary.md  jurisdiction-rules.md  numerals.md  prior-art.md  workflow.md
tests/: test_models.py  test_utils.py  test_validators.py
