[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patentorney-mcp"
version = "0.2.0"
description = "MCP server for managing patent application drafts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["mcp", "patent", "drafting", "ip"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/retospect/patentorney-mcp"
Repository = "https://github.com/retospect/patentorney-mcp"

[project.scripts]
patentorney-mcp = "patentorney_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/patentorney_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
